# rustos

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SUPPORT.md  rust-toolchain.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  blog-os-adoption.md  descriptors.md  paging.md  roadmap.md  syscalls.md  tasks.md  testing.md  unix-like.md
docs/decisions/: 0001-target-platform.md
kernel/: Cargo.toml
kernel-core/: Cargo.toml
kernel-core/src/: lib.rs
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: mod.rs
kernel/src/boot/: mod.rs
kernel/src/console/: mod.rs
kernel/src/interrupt/: mod.rs
kernel/src/memory/: mod.rs
kernel/src/paging/: mod.rs
kernel/src/panic/: mod.rs
kernel/src/syscall/: mod.rs
nucleus/: Cargo.toml
nucleus/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
