[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[lib]
path = "src/lib.rs"
test = false
bench = false
doctest = false

[dependencies]
nucleus = { path = "../nucleus" }
uefi = { version = "0.37.0", features = ["logger", "panic_handler"] }
log = "0.4"
