[package]
name = "kernel"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[lib]
path = "src/lib.rs"
test = false
bench = false
doctest = false

[dependencies]
nucleus = { path = "../nucleus" }
uefi = { version = "0.37.0", features = ["logger", "panic_handler"] }
log = "0.4"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
x86_64 = { version = "0.15.4", features = ["instructions", "abi_x86_interrupt"] }
